# reefvpn-client

./: .gitignore  index.html  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml  release.yml
daemon/: Cargo.toml
daemon/src/: firewall.rs  ipc.rs  main.rs  service.rs  singbox.rs  types.rs
scripts/: sign-info.md  sign.ps1
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  app.manifest  build.rs  tauri.conf.json
src-tauri/src/: commands.rs  ipc_client.rs  lib.rs  main.rs  types.rs
src/components/: Sidebar.tsx
src/lib/: api.ts  i18n.ts  store.ts
src/pages/: AccountSettings.tsx  Dashboard.tsx  Login.tsx  Presets.tsx  Servers.tsx  Settings.tsx
