[package]
name = "reefvpn-daemon"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
dirs = "6"
log = "0.4"
env_logger = "0.11"

[target.'cfg(windows)'.dependencies]
windows-service = "0.7"
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Pipes",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_NetworkManagement_WindowsFilteringPlatform",
    "Win32_System_Rpc",
] }
